[Java] Fixed spotbugs issues in performance test